tests/parser/tests/cases/should_fail/dangling_parenthesis/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:17
1 |   k := (a) + ((b)));
  |                   ^ here
  = note: Unexpectedly reached the end of input. Consider adding a ';'
